---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 29. 08. 2018
  Info:
    - Hide the recipes for permutation from the technology screen
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 23. 08. 2018
  Info:
    - Added a changelog
    - Improved the recipe parsing slightly
    - Made compatible with Omnimatter (Still Omnimatter explicitly throws an error if Fluid Permutations is enabled, I can do nothing about that)
    - These changes are backward compatible