@@ -3,6 +3,7 @@ Version: 0.0.5
 Date: 29. 08. 2018
   Info:
     - Hide the recipes for permutation from the technology screen
+    - Add more optional dependencies (MoreScience, MoreSciencePacks and Clowns-Science)
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.4
 Date: 23. 08. 2018
